# qt_cmake

./: CMakeLists.txt  form.cpp  form.h  form.ui  main.cpp
